# ml-ds-projects

./: .gitignore  Analyze Data.ipynb  Data Visualization.ipynb  Inverse Matrix.ipynb  LU Decomposition.ipynb  Modelling Techniques.ipynb  README.md  Tokenization.ipynb  german-nouns-gender-analysis.ipynb  gradient_discent.py  pyproject.toml  utils.py
Digit Recognizer MNIST/: Digit Recognizer.ipynb
EPL/: EPLv1.wdl (24251.0 DTR mln=11).ipynb  all_df.csv  result_v1.csv
English Premier League/: ELPv3.StandartScaler.ipynb  EPLv1.wdl (24251.0 DTR mln=11).ipynb  EPLv1.wdl.ipynb  English Premier League.ipynb  ModelPerfomance.ipynb  all_df.csv  data.py  notes.py  result.csv  utils.py
German nouns/: german-nouns-gender-analysis.ipynb
House Prices/: Analyze Data.ipynb  House Price.ipynb  README.md
Intro to ML/: ModellingInML.ipynb
Titanic/: Analyze Data.ipynb  Feature Engineering.ipynb  README.md  Titanic.ipynb  output.csv
Traffic Sign Recognition Benchmark (GTSRB)/: Traffic Sign Recognition.ipynb  gtsrb_list.py
UFC/: UFC Data.ipynb  UFC.ipynb  features.py  res.csv
data/: Harry_Potter_and_the_Philosophers_Stone.txt  german-postfixes.txt  german_nouns_classified.csv  german_top3k_nouns.txt  german_top_3k_nouns.csv  german_top_3k_nouns_utf.csv
notes/: ModellingInNotes.ipynb  utils.py
src/: RealEstateMelbourne.ipynb
src/.ipynb_checkpoints/: RealEstateMelbourne-checkpoint.ipynb
