[tool.poetry]
name = "ds-jupyter-notebook"
version = "0.1.0"
description = ""
authors = ["dianamatkava <dianamatkava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
numpy = "^1.26.4"
xgboost = "^2.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
